--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.addressables": "1.20.5",
     "com.unity.ads": "4.1.0",
     "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.ide.rider": "3.0.15",
